# claude-code-marketplace

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README.ru.md  SKILL_TRIGGER_QUICK_REFERENCE.md  SKILL_TRIGGER_REVIEW_CHECKLIST.md  TRIGGER_IMPROVEMENT_SUMMARY.md
.claude-plugin/: marketplace.json
bugsnag-skill/: README.md  README.ru.md
cluster-efficiency/: README.md  README.ru.md
configuration/: himalaya-account.1  himalaya-attachment.1  himalaya-completion.1  himalaya-envelope.1  himalaya-flag.1  himalaya-folder.1  himalaya-manual.1  himalaya-message.1  himalaya-template.1  himalaya.1
dapi-dev-tools/: README.md
dapi-testing-tools/: README.md
dev-tools/: README.md
doc-validate/: README.md  README.ru.md
email/: README.md
github-workflow/: README.md  README.ru.md
himalaya/: README.md  README.ru.md
long-running-harness/: README.md  README.ru.md
media-upload/: README.md  README.ru.md
pr-review-fix-loop/: README.md
reports/: context-efficiency-test-2026-02-23.md
requirements/: README.md  README.ru.md
scripts/: README.md  do-issue  lint_no_emoji.sh  lint_no_surrogates.sh  review_skill_triggers.sh  start-issue  zellij-rename-tab  zellij-rename-tab-to-issue-number  zellij-tab-status
skill-finder/: README.md
spec-reviewer/: ALTERNATIVES.md  README.md  README.ru.md
task-router/: README.md
testing-tools/: README.md
tgcli/: README.md
zellij-claude-status/: README.md
zellij-dev-tab/: README.md  README.ru.md
zellij-tab-rename/: Cargo.toml  Makefile  README.md
zellij-tab-rename/src/: main.rs
zellij-workflow/: README.md  (+2 more)
(+223 files in other folders)
